<resources>
    <string name="app_name">Android Training</string>
    <string name="action_settings">Settings</string>
    <string name="projectname">Project Name</string>
    <string name="code">Code</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="version">Version</string>
    <string name="save">Save</string>
    <string name="okay">Okay</string>
    <string name="fillinthisfield">fill in this field.</string>
    <string name="saved">Saved!</string>
    <string name="unabletostoreproject">Unable to store project.</string>
    <string name="close">Close</string>
    <string name="upload">Upload</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="list">List</string>
    <string name="sent">Sent</string>
</resources>
