<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asia.dattel.androidtraining.DiaryAddFragment">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/button_save"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <com.app.infideap.stylishwidget.view.AEditText
                android:id="@+id/editText_project_name"
                style="@style/EditText.RoundBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/projectname"
                android:maxEms="1" />

            <com.app.infideap.stylishwidget.view.AEditText
                android:id="@+id/editText_code"
                style="@style/EditText.RoundBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/code"
                android:maxEms="1" />

            <com.app.infideap.stylishwidget.view.AEditText
                android:id="@+id/editText_start_date"
                style="@style/EditText.RoundBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/startdate"
                android:inputType="datetime"
                android:maxEms="1" />

            <com.app.infideap.stylishwidget.view.AEditText
                android:id="@+id/editText_end_date"
                style="@style/EditText.RoundBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/enddate"
                android:inputType="datetime"
                android:maxEms="1" />

            <com.app.infideap.stylishwidget.view.AEditText
                android:id="@+id/editText_version"
                style="@style/EditText.RoundBorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="15"
                android:inputType="numberDecimal"
                android:hint="@string/version"
                android:maxEms="1" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <com.app.infideap.stylishwidget.view.AButton
        android:id="@+id/button_save"
        android:text="@string/save"
        style="@style/Button.Accent.Fill"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content" />
</RelativeLayout>
